-- show version
-- hostname <string>
-- default (input|output|forward)-policy (deny|allow)

Alpha 0.3
- Implement some commands
-- show version
-- show interfaces
-- save

Alpha 0.4
- Implement some commands
-- show acls
-- acl <name> (...)
-- ip routing
-- firewall -> disable | enable
-- interface <name>
- Loading configuration from configuration file
- Stability fixes

Alpha 0.5
- iputils added to calculate some things under IPs
- Remove default forward-policy
- Implement interface <name> -> shutdown
- Implement show ip routes
- Implement no <cmd> handling
- Implement no shutdown command
- Prepare interface acl handling
- Implement saving configuration

Alpha 0.6
- Pré-implément ACL binding for in/out on interfaces
- Update Copyright for 2012
- Implement prompt_msg file which contains majority of text macros
- Implement ip routing & ip multicast-routing

Alpha 0.7
- Implement show running-config
- Implement show startup-config
- Implement ip route A.B.C.D M.A.S.K G.A.T.E

Alpha 0.8
- interactive shell for extended ACLs (ip access-list <name> extended command)

Alpha 0.9
- Caught CTRL+C & CTRL+Z signal for return to enable menu

Alpha 0.10
- Use DHClient only when interface is up
- Save Interface configuration in system when command save is done
- Implement function to calculate str netmask by cidr
- Bugfix on Interface <name> -> Description command
- Implement Interface -> no description command
- Refuse Proto on firewall when not TCP,UDP,ICMP (need more support for generic protos later)

Alpha 0.11
- Implement writing pf.conf rules with reloading
- Due to this, remove editPacketFilter command
- Reload packet filter only if it's enabled
- Implement configuration for firewall state. Disable is written, Enable by default
- Fix malloc warnings on compilation
- Fix strcmp, strcat warnings on compilation
- Implement show firewall stats to get stats from PacketFilter

Alpha 0.12 - prev
- Added quick keyword for packetFilter to go out of rules tables when match.