@@ -225,6 +225,9 @@ unsigned short writeRunningConfig()
 		}
 
 		fclose(confFile);
+
+		hsystemcmd("/bin/md5 /opt/PFShell/running-config | awk '{print $4}' > /opt/PFShell/running-config.md5");
+		hsystemcmd("/bin/sha1 /opt/PFShell/running-config | awk '{print $4}' > /opt/PFShell/running-config.sha1");
 	}
 
 	writeFirewall();
