@@ -74,3 +74,5 @@ Alpha 0.11
 
 Alpha 0.12 - prev
 - Added quick keyword for packetFilter to go out of rules tables when match.
+- Added fingerprinting for startup-config and running-config in md5 and sha1
+- Implement no hostname <name>
